# tf-chatbot

./: README.md  main.py  pyproject.toml
model/: chatbot_interface.py  train_model.py
resources/: chat_bot_model.h5  classes.pkl  intents.json  words.pkl
